Alterar forma de login e refatorar test
